--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ pytz = "==2021.1"
 sqlparse = "==0.4.1"
 Django = "==3.2.5"
 Pillow = "==8.3.1"
+django-import-export = "*"
 
 [requires]
 python_version = "3.8"
