--- a/Pipfile
+++ b/Pipfile
@@ -6,12 +6,12 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-asgiref = "==3.3.2"
-more-itertools = "==8.8.0"
-pytz = "==2021.1"
-sqlparse = "==0.4.1"
-Django = "==3.2.5"
-Pillow = "==8.3.1"
+asgiref = "*"
+more-itertools = "*"
+pytz = "*"
+sqlparse = "*"
+Django = "*"
+Pillow = "*"
 django-import-export = "*"
 pyyaml = "*"
 xlrd = "*"
