--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
-asgiref==3.3.2
+asgiref==3.4.1
 defusedxml==0.7.1
 diff-match-patch==20200713
-Django==3.2.5
-django-import-export==2.5.0
-et-xmlfile==1.0.1
+Django==3.2.8
+django-import-export==2.6.1
+et-xmlfile==1.1.0
+geographiclib==1.52
+geopy==2.2.0
 MarkupPy==1.14
-more-itertools==8.8.0
+more-itertools==8.10.0
 odfpy==1.4.1
-openpyxl==3.0.7
-Pillow==8.3.1
-pytz==2021.1
-PyYAML==5.4.1
-sqlparse==0.4.1
+openpyxl==3.0.9
+Pillow==8.4.0
+pytz==2021.3
+PyYAML==6.0
+sqlparse==0.4.2
 tablib==3.0.0
 xlrd==2.0.1
 xlwt==1.3.0
